2002-03-08  Martin Weber <martweb@gmx.net>

	* fit.c (filter): Put the definition 
	of prev_new_point out of the loop.

	(distance): Don't use hypot.

	Message-ID: <3C87B48C.82FAC8CF@gmx.net>.
	
2002-03-06  Martin Weber <martweb@gmx.net>

	* curve.c: Corrected copyright notice

	* fit.c: Likewise.

	Message-ID: <3C84F316.2DB5B7A1@gmx.net>.

2002-03-06  Martin Weber <martweb@gmx.net>

	* autotrace.vcproj: Linking with certain ImageMagick 
	versions didn't work correctly.
	
	* autotrace.dsp: Likewise.

	Message-ID: <3C84F0C1.4C989134@gmx.net>.
	
2002-03-06  Martin Weber <martweb@gmx.net>

	* fit.c (filter): fixed a bug in the filtering routine.
	avoid to use epsilon_equal.

	Message-ID: <3C84F2FD.C35ACD34@gmx.net>.

2002-02-14  Masatake YAMATO  <yamato@redhat.com>

	* autotrace.h (struct _at_fitting_opts_type::despeckle_level): 
	made "unsigned".
	(struct _at_fitting_opts_type): Corrected wrong comments.

2001-12-24  Martin Weber <martweb@gmx.net>

	* vector.c (magnitude): replaced hypot.

	(Message-ID: <14237.1013082801@www56.gmx.net>).
	
2002-02-06  Masatake YAMATO  <yamato@redhat.com>

	* configure.in (AC_CHECK_LIB): Put '[', ']' to nested macro
	invocations.

2002-02-05  Masatake YAMATO  <yamato@redhat.com>

	* Makefile.am (EXTRA_DIST): Removed vc++6.0.txt.

2002-02-04  Masatake YAMATO  <yamato@redhat.com>

	* Makefile.am (pkgconfig_DATA, pkgconfigdir): 
	Added pkgconfig supprots.

	* configure.in: Likewise.

	* autotrace.pc.in: New file.

	* main.c (dot_printer): Rewrite.
	(main): print an input file name and newline when 
	report_progress is true.
	(main::progress_stat): Make int.
	(dot_printer_max_column, dot_printer_char): New defs.

2002-01-31  Masatake YAMATO  <yamato@redhat.com>

	* Makefile.am (man_MANS): Added autotrace.1.

	* autotrace.1: Contributed by R. P. C. Rodgers<rodgers@nlm.nih.gov>.

2002-01-30  Masatake YAMATO  <yamato@redhat.com>

	* configure.in (AC_CHECK_LIB(png)): Added -lm.

2002-01-27  Masatake YAMATO  <yamato@redhat.com>
